error.log
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\F:\Rust\SimpleImageViewer\target\debug\incremental\build_script_build-3agkyqzpu9ye1\s-hh732esslu-11wvzbg-working`

warning: `simple-image-viewer` (build script) generated 1 warning
warning: simple-image-viewer@0.1.0: icon.ico generated from icon.png
    Checking simple-image-viewer v0.1.0 (F:\Rust\SimpleImageViewer)
error[E0425]: cannot find value `scroll_delta` in this scope
   --> src\app.rs:325:13
    |
325 |             scroll_delta = i.smooth_scroll_delta.y;
    |             ^^^^^^^^^^^^
    |
help: you might have meant to introduce a new binding
    |
325 |             let scroll_delta = i.smooth_scroll_delta.y;
    |             +++

error[E0425]: cannot find value `scroll_delta` in this scope
   --> src\app.rs:359:12
    |
359 |         if scroll_delta > 0.0 {
    |            ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `scroll_delta` in this scope
   --> src\app.rs:361:19
    |
361 |         } else if scroll_delta < 0.0 {
    |                   ^^^^^^^^^^^^ not found in this scope

warning: unused import: `rodio::Source`
 --> src\audio.rs:4:5
  |
4 | use rodio::Source; // needed for .amplify()
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `copied_text` on type `&mut PlatformOutput`
   --> src\app.rs:840:55
    |
840 | ...                   ui.ctx().output_mut(|o| o.copied_text = path_str.clone());
    |                                                 ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `commands`, `cursor_icon`, `events`, `mutable_text_under_cursor`, `ime` ... and 3 others

warning: use of deprecated method `egui::Ui::close_menu`: Use `ui.close()` or `ui.close_kind(UiKind::Menu)` instead
   --> src\app.rs:841:32
    |
841 | ...                   ui.close_menu();
    |                          ^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `egui::Ui::close_menu`: Use `ui.close()` or `ui.close_kind(UiKind::Menu)` instead
   --> src\app.rs:846:32
    |
846 | ...                   ui.close_menu();
    |                          ^^^^^^^^^^

Some errors have detailed explanations: E0425, E0609.
For more information about an error, try `rustc --explain E0425`.
warning: `simple-image-viewer` (bin "siv") generated 3 warnings
warning: simple-image-viewer@0.1.0: icon.ico generated from icon.png
error: could not compile `simple-image-viewer` (bin "siv") due to 4 previous errors; 3 warnings emitted
